# amaranth-zynq

./: .gitignore  pyproject.toml
.github/workflows/: main.yml
amaranth_zynq/: __init__.py  interfaces.py  platform.py
amaranth_zynq/ps7/: __init__.py  layouts.py  pl.py  ps.py
amaranth_zynq/ps8/: __init__.py  plat.py  ps.py
examples/: axi.py  axi7.py  basic.py  zedboard.py
tests/: test_examples.py
