[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "amaranth-zynq"
dynamic = ["version"]
readme = "README.md"
description = "Amaranth Zynq support"
dependencies = [
    "amaranth ~= 0.5.0",
    "amaranth-axi @ git+https://github.com/yuyichao/amaranth-axi"
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]
authors = [
  {name = "andresdemski", email = "andresdemski@gmail.com"},
  {name = "Yichao Yu", email = "yyc1992@gmail.com"},
]

[project.urls]
"Source Code" = "https://github.com/yuyichao/amaranth-zynq"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest >= 8.0.0",
]

[tool.setuptools]
packages = ["amaranth_zynq"]

[tool.setuptools_scm]
